--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-data-asyncstorage",
   "description": "js-data Adapter for react-native AsyncStorage",
-  "version": "1.1.1",
+  "version": "0.1.0",
   "homepage": "http://www.js-data.io/docs/dsasyncstorageadapter",
   "repository": {
     "type": "git",
@@ -26,7 +26,7 @@
     "adapter",
     "asyncstorage"
   ],
-  "main": "./dist/js-data-asyncstorage.js",
+  "main": "./src/index.js",
   "devDependencies": {
     "babel-core": "4.7.7",
     "babel-loader": "4.2.0",
